# rs_math

./: .gitignore  Cargo.toml  README.md
benches/: tensor_bench.rs
benches/input/matrix_imgs/: generate.sh
pkg/: rpm.spec  version.config
src/: lib.rs
src/matrix/: matrix_core.rs  matrix_linalg.rs  mod.rs
src/stats/: dist.rs  mod.rs
src/tensor/: mod.rs  numpy_comparison.txt  numpy_matmul.py  tensor_arithmetic.rs  tensor_core.rs  tensor_eq.rs  tensor_error.rs  tensor_iter.rs  tensor_linalg.rs
src/vector/: mod.rs  vector_core.rs
tests/: test_dist.rs  test_matrix_core.rs  test_tensor_arithmetic.rs  test_tensor_core.rs  test_tensor_linalg.rs  test_vector_core.rs
tests/thirdparty_examples/: numpy_ndarray.py  numpy_ndarray_axis.py  numpy_ndarray_multiplication.py
tests/utils/: ndim_vec.rs  py_ndarray.rs
