[package]
name       = "rs_math"
edition    = "2021"

[lib]
crate-type = ["lib"]

[dependencies]
rand = "0.9"
rand_distr = "0.5"
indexmap = "2.9"
num-traits = "0.2"

[dev-dependencies]
image     = "0.25"
criterion = "0.5"
pyo3 = "0.25"
numpy = "0.25"
ndarray   = "0.16"

[[bench]]
name = "tensor_bench"
harness = false

